Add DRL literature

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -709,3 +709,65 @@
   url       = {https://dl.acm.org/doi/10.1145/3383455.3422540},
   year      = {2020}
 }
+@article{Zhang2023,
+   abstract = {Accurately predicting the prices of financial time series is essential and challenging for the financial sector. Owing to recent advancements in deep learning techniques, deep learning models are gradually replacing traditional statistical and machine learning models as the first choice for price forecasting tasks. This shift in model selection has led to a notable rise in research related to applying deep learning models to price forecasting, resulting in a rapid accumulation of new knowledge. Therefore, we conducted a literature review of relevant studies over the past 3 years with a view to aiding researchers and practitioners in the field. This review delves deeply into deep learning-based forecasting models, presenting information on model architectures, practical applications, and their respective advantages and disadvantages. In particular, detailed information is provided on advanced models for price forecasting, such as Transformers, generative adversarial networks (GANs), graph neural networks (GNNs), and deep quantum neural networks (DQNNs). The present contribution also includes potential directions for future research, such as examining the effectiveness of deep learning models with complex structures for price forecasting, extending from point prediction to interval prediction using deep learning models, scrutinizing the reliability and validity of decomposition ensembles, and exploring the influence of data volume on model performance. This article is categorized under: Technologies > Prediction Technologies > Artificial Intelligence.},
+   author = {Cheng Zhang and Nilam Nur Amir Sjarif and Roslina Ibrahim},
+   doi = {10.1002/WIDM.1519},
+   issn = {1942-4795},
+   issue = {1},
+   journal = {Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+   keywords = {deep learning,financial market,neural network,price forecast,time series},
+   month = {9},
+   pages = {e1519},
+   publisher = {John Wiley \& Sons, Ltd},
+   title = {Deep learning models for price forecasting of financial time series: A review of recent advancements: 2020–2022},
+   volume = {14},
+   url = {https://onlinelibrary.wiley.com/doi/full/10.1002/widm.1519 https://onlinelibrary.wiley.com/doi/abs/10.1002/widm.1519 https://wires.onlinelibrary.wiley.com/doi/10.1002/widm.1519},
+   year = {2023}
+}
+@article{Chaudhary2025,
+   abstract = {Predicting stock market movements remains a persistent challenge due to the inherently volatile, non-linear, and stochastic nature of financial time series data. This paper introduces a deep learning-based framework employing Long Short-Term Memory (LSTM) networks to forecast the closing stock prices of major technology firms: Apple, Google, Microsoft, and Amazon, listed on NASDAQ. Historical data was sourced from Yahoo Finance and processed using normalization and feature engineering techniques. The proposed model achieves a Mean Absolute Percentage Error (MAPE) of 2.72 on unseen test data, significantly outperforming traditional models like ARIMA. To further enhance predictive accuracy, sentiment scores were integrated using real-time news articles and social media data, analyzed through the VADER sentiment analysis tool. A web application was also developed to provide real-time visualizations of stock price forecasts, offering practical utility for both individual and institutional investors. This research demonstrates the strength of LSTM networks in modeling complex financial sequences and presents a novel hybrid approach combining time series modeling with sentiment analysis.},
+   author = {Rajneesh Chaudhary},
+   isbn = {2505.05325v1},
+   keywords = {Deep Learning,Financial Modeling,Long Short-Term Memory (LSTM),Sentiment Analysis,Stock Market Prediction,Time Series Forecasting,Web Application},
+   month = {5},
+   title = {Advanced Stock Market Prediction Using Long Short-Term Memory Networks: A Comprehensive Deep Learning Framework},
+   url = {http://arxiv.org/abs/2505.05325},
+   year = {2025},
+   journal = {Journal of Financial Data Science}
+}
+@article{Liu2020,
+   author = {Xiao-Yang Liu},
+   doi = {10.2139/SSRN.3737257},
+   journal = {SSRN Electronic Journal},
+   keywords = {FinRL,FinRL: A Deep Reinforcement Learning Library for Automated Stock Trading in Quantitative Finance,SSRN,Xiao-Yang Liu,finance,reinforcement learning},
+   month = {11},
+   publisher = {Elsevier BV},
+   title = {FinRL: A Deep Reinforcement Learning Library for Automated Stock Trading in Quantitative Finance},
+   url = {https://papers.ssrn.com/abstract=3737257},
+   year = {2020}
+}
+@article{Jiang2016,
+   abstract = {Portfolio management is the decision-making process of allocating an amount of fund into different financial investment products. Cryptocurrencies are electronic and decentralized alternatives to government-issued money, with Bitcoin as the best-known example of a cryptocurrency. This paper presents a model-less convolutional neural network with historic prices of a set of financial assets as its input, outputting portfolio weights of the set. The network is trained with 0.7 years' price data from a cryptocurrency exchange. The training is done in a reinforcement manner, maximizing the accumulative return, which is regarded as the reward function of the network. Backtest trading experiments with trading period of 30 minutes is conducted in the same market, achieving 10-fold returns in 1.8 months' periods. Some recently published portfolio selection strategies are also used to perform the same back-tests, whose results are compared with the neural network. The network is not limited to cryptocurrency, but can be applied to any other financial markets.},
+   author = {Zhengyao Jiang and Jinjun Liang},
+   doi = {10.1109/IntelliSys.2017.8324237},
+   isbn = {9781509064359},
+   journal = {2017 Intelligent Systems Conference, IntelliSys 2017},
+   keywords = {Machine learning,algorithmic trading,convolutional neural networks,cryptocurrency,deep reinforcement learning,deterministic policy gradient,portfolio management,quantitative finance},
+   month = {12},
+   pages = {905-913},
+   publisher = {Institute of Electrical and Electronics Engineers Inc.},
+   title = {Cryptocurrency Portfolio Management with Deep Reinforcement Learning},
+   volume = {2018-January},
+   url = {https://arxiv.org/abs/1612.01277v5},
+   year = {2016}
+}
+@article{Zhang2019,
+   abstract = {We adopt Deep Reinforcement Learning algorithms to design trading strategies for continuous futures contracts. Both discrete and continuous action spaces are considered and volatility scaling is incorporated to create reward functions which scale trade positions based on market volatility. We test our algorithms on the 50 most liquid futures contracts from 2011 to 2019, and investigate how performance varies across different asset classes including commodities, equity indices, fixed income and FX markets. We compare our algorithms against classical time series momentum strategies, and show that our method outperforms such baseline models, delivering positive profits despite heavy transaction costs. The experiments show that the proposed algorithms can follow large market trends without changing positions and can also scale down, or hold, through consolidation periods.},
+   author = {Zihao Zhang and Stefan Zohren and Stephen Roberts},
+   journal = {Papers},
+   publisher = {arXiv.org},
+   title = {Deep Reinforcement Learning for Trading},
+   url = {https://ideas.repec.org/p/arx/papers/1911.10107.html https://ideas.repec.org//p/arx/papers/1911.10107.html},
+   year = {2019}
+}
