--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -296,7 +296,7 @@ This parameter is used to control the trade-off between the entropy and the rewa
 
 The pseudo-code for the algorithm for \acrshort{sac} is outlined in appendix \ref{alg:sac}.
 
-\subsubsection{Algorithm comparison}
+\subsubsection{Algorithm comparison} \label{sec:algorithmcomparison}
 
 The five algorithms presented above are among the most widely used in the field of \acrshort{drl}, each addressing specific challenges in policy estimation and value function approximation. \acrshort{a2c} is an on-policy actor-critic method that reduces variance through advantage estimation, while \acrshort{ppo} changed on-policy learning by introducing a clipped surrogate objective that ensures stable policy updates. Although \acrshort{ddpg} pioneered continuous control through deterministic policies, \acrshort{td3} addressed the overestimation bias of its predecessor via twin critics and delayed updates. \acrshort{sac} revolutionised the field of \acrshort{drl} by incorporating maximum entropy principles.
 
@@ -453,3 +453,17 @@ The method works by exploiting the tree structure and the main steps of the algo
     \item For each feature, compute the Shapley value by averaging the contributions across all nodes in the tree.
     \item Return the Shapley values as the feature importances.
 \end{itemize} 
+
+\section{Literature Review} \label{sec:literature_review}
+
+The emergence of \acrfull{ml} and its rise in popularity have led a new research direction in various financial applications, due to \acrshort{ml} algorithms' ability to learn complex patterns from high-dimensional data and adapt to changing market conditions. Particularly, the main approaches in the financial field include the use of \acrlong{dl} and \acrfull{rl} for price trend prediction \cite{Zhang2023} and portfolio optimisation \insertref{}. 
+
+The topic of portfolio optimisation with multiple risky financial assets has been extensively studied and it still poses a challenging task due to the complex and stochastic nature of financial markets. The traditional approaches to portfolio optimisation, such as the \acrfull{mvo} \cite{Markowitz1952}, have been widely used, but they often rely on assumptions that do not hold in practice, such as the normality of returns and the stability of the covariance matrix. As a result, these methods can lead to suboptimal portfolios and poor performance in real-world scenarios.
+
+The use of \acrlong{dl} architectures is particularly prominent in the context of price prediction, where deep neural networks are employed to learn complex patterns in historical price data. For instance, \acrfull{lstm} architectures are particularly well-suited for financial time series forecasting due to their ability to capture long-term dependencies and temporal patterns in the data. The performance of these architectures can lead to a \acrfull{mape} as lows as 2.72\%, as demonstrated by Chaudhary (2025) \cite{Chaudhary2025}. Shen et al. (2020) \cite{Shen2020} also propose a \acrshort{lstm} architecture for short-term trend prediction. Despite its simple architecture, its main contributions rely on the feature engineering process. Their proposal incorporates feature extension, followed by recursive feature elimination and finally, performs \acrfull{pca} to reduce the dimensionality of the input data for the \acrshort{lstm} model. The use of \acrshort{pca} improves the training efficiency of the architecture by 36.8\% \cite{Shen2020}. 
+
+The use of ensemble methods is also prominent for price prediction, where techniques such as stacking, blending, boosting and bagging are employed to combine the predictions of multiple models. For example, Nti et al. (2020) \cite{Nti2020} explore twenty-five different ensemble classifiers and regressors based on Decision Trees, Support Vector Machines and Neural Networks. Their research shows that although stacking and boosting ensemble algorithms provide better results in terms of accuracy, they are the most computationally expensive. 
+
+When it comes to portfolio optimisation, \acrshort{drl} algorithms are particularly better suited as they address the sequential decision making nature of portfolio management. Unlike traditional \Gls{supervisedlearning} approaches that require labelled data, \acrshort{drl} enables agents to learn optimal investment strategies through direct interaction with market environments. This paradigm allows for the dynamic adjustment of portfolio weights without the need for predefined rules, making it well-suited to capture market non-linearities and adapt to changing conditions. There are numerous \acrshort{drl} algorithms, as outlined in Section \ref{sec:drlalgorithms}, with each being particularly suited to different aspects of the portfolio management process, namely, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance. 
+
+Liu et al. (2018) \cite{Liu2018} propose the use of \acrshort{ddpg} for profitable stock trading, where the agent learns to buy, hold and sell stocks based on the historical price data with the goal of maximising the investment return. Their proposal outperforms the \acrfull{djia} and the min-variance portfolio allocation strategies, achieving an annualised return of 25.86\% and a Sharpe ratio of 1.79. Their work is further extended by Liu (2020) \cite{Liu2020} by proposing a Python library, FinRL, which provides a comprehensive framework for developing and evaluating \acrshort{drl} algorithms in the context of financial trading. Although the library provides implementation for numerous \acrshort{drl} algorithms including \acrshort{dqn}, \acrshort{a2c} and \acrshort{sac}, they evaluate the performance of \acrshort{td3} and \acrshort{ddpg} on the \acrfull{djia} constituents for the task of portfolio allocation. Moreover, an interesting aspect of their work is the incorporation of the turbulence index, that measures extreme asset price fluctuations, to control portfolio risk. Furthermore, portfolio management has not only been explored on traditional asset, but rather Jiang et al. (2016) \cite{Jiang2016} explore \acrshort{drl} for portfolio management in the context of cryptocurrencies and Zhang et al. (2019) \cite{Zhang2019} apply it to future contracts. 
